kustomize/overlays/prod/microservice2/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice2
  namespace: prod-namespace
spec:
  replicas: 2
