kustomize/overlays/prod/microservice2/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice2
  namespace: prod-namespace
spec:
  type: ClusterIP
