kustomize/overlays/prod/microservice2/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: microservice2
  namespace: prod-namespace
spec:
  to:
    kind: Service
    name: microservice2
    weight: 100
  host: microservice2-prod.prod.apps.ocp4.example.com
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
